using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Constants
{
    public static class tag {
        public static string enemy = "enemy";
        public static string player = "player";
    }
    public static class anim_str {
        public static string run = "run";
        public static string idle = "cheering";
        public static string pass = "pass";
    }
    public static class Cons_Value {
        public static float time_Rote_Character = 0.3f;
        public static float time_anim_Character_Kick = 0.15f;
    }
    
}
